--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body class="bg-gray-800  flex flex-col pt-16 text-center">
-    <div class="bg-orange-600 max-w-lg m-auto w-full rounded-lg shadow-md shadow-black p-5">
+    <div class="bg-orange-600 max-w-lg m-auto w-full rounded-lg shadow-md shadow-black p-2">
         <header class="bg-orange-600 m-auto w-full h-20 flex justify-center space-x-10">
             <img class="w-24 " src="src/img/logo_novo_tempo-removebg-preview.png" alt="">
             <img class="w-24 " src="src/img/LogoMissaoCalebe.png" alt="">
@@ -24,33 +24,33 @@
                 </iframe>
             </div>
         </div>
-        <div class="flex flex-col w-full px-5 gap-5">
-            <h2 class="text-white font-bold text-2xl font-roboto">Quer conhecer mais sobre a bíblia ?</h2>
-            <a href="adv.st/queroestudar" class="m-auto">
-                <button class="bg-orange-500 p-1 shadow-md rounded-lg shadow-black w-96 flex">
-                    <img class="w-10 ml-5" src="src/img/whatsapp.png" alt="">
-                    <p class="m-auto  text-white font-bold">Fale com a Esperança</p>
+        <div class="flex flex-col w-full gap-5">
+            <h2 class="text-white font-bold text-xl md:text-2xl font-roboto">Quer conhecer mais sobre a bíblia ?</h2>
+            <a href="adv.st/queroestudar" class="m-auto w-10/12 md:w-8/12">
+                <button class="bg-orange-500 p-1 shadow-md rounded-lg shadow-black w-full flex">
+                    <img class="w-8 ml-3 custom:ml-5" src="src/img/whatsapp.png" alt="">
+                    <p class="m-auto text-sm custom:text-md md:text-md  text-white font-bold">Fale com a Esperança</p>
                 </button>
             </a>
-            <h2 class="text-white font-bold text-xl">Conheça alguns de nossos canais :</h2>
-            <h2 class="text-white font-bold text-xl">Pelo Youtube</h2>
-            <a href="https://www.youtube.com/@novotempo" class="m-auto">
-                <button class="bg-orange-500 p-1 shadow-md rounded-lg shadow-black w-96 flex">
-                    <img class="w-14 ml-5" src="src/img/youtube.png" alt="">
-                    <p class="m-auto  text-white font-bold">Rede Novo Tempo de Comunicação</p>
+            <h2 class="text-white font-bold text-md custom:text md:text-xl">Conheça alguns de nossos canais :</h2>
+            <h2 class="text-white font-bold text-md md:text-xl">Pelo Youtube</h2>
+            <a href="https://www.youtube.com/@novotempo" class="m-auto w-10/12 md:w-8/12">
+                <button class="bg-orange-500 p-1 shadow-md rounded-lg shadow-black w-full flex">
+                    <img class="w-10 custom:ml-5 ml-3" src="src/img/youtube.png" alt="">
+                    <p class="m-auto text-sm custom:text-md text-white font-bold">Rede Novo Tempo</p>
                 </button> 
             </a>
-            <a href="" class="m-auto">
-                <button class="bg-orange-500 p-1 shadow-md rounded-lg shadow-black w-96 flex">
-                    <img class="w-14 ml-5" src="src/img/youtube.png" alt="">
-                    <p class="m-auto mr-20 text-white font-bold">Gravadora Novo Tempo</p>
+            <a href="" class="m-auto w-10/12 md:w-8/12">
+                <button class="bg-orange-500 p-1 shadow-md rounded-lg shadow-black w-full flex">
+                    <img class="w-10 custom:ml-5 ml-3" src="src/img/youtube.png" alt="">
+                    <p class="m-auto text-sm md:text-md text-white font-bold">Gravadora Novo Tempo</p>
                 </button>
             </a>
-            <h2 class="text-white font-bold text-xl">Pelo rádio</h2>
-            <a href="https://www.novotempo.com/radioaovivo/" class="m-auto">
-                <button class="bg-orange-500 p-1 shadow-md rounded-lg shadow-black w-96 flex">
-                    <img class="w-10 ml-5" src="src/img/radio.png" alt="">
-                    <p class="m-auto mr-20 text-white font-bold">Rádio Novo Tempo Online</p>  
+            <h2 class="text-white font-bold text-md md:text-xl">Pelo rádio</h2>
+            <a href="https://www.novotempo.com/radioaovivo/" class="m-auto w-10/12 md:w-8/12">
+                <button class="bg-orange-500 p-1 shadow-md rounded-lg shadow-black w-full flex">
+                    <img class="w-8 custom:ml-5 ml-3" src="src/img/radio.png" alt="">
+                    <p class="m-auto text-sm md:text-md text-white font-bold w-auto">Rádio Novo Tempo Online</p>  
                 </button>
             </a>
         </div>
@@ -58,7 +58,7 @@
             <div class="flex flex-col w-full h-3/6 border-white rounded-md bg-orange-500 p-3 shadow-md shadow-black">
                 <div class="w-12/12 text-center">
                     <h2 class="mb-3 text-white font-bold text-lg">Canais de TV</h2>
-                    <div class="flex text-md text-center text-white gap-10 justify-center pb-5">
+                    <div class="flex text-md text-center text-white gap-3 md:gap-10 justify-center pb-5">
                         <p class="">Sky <br> 31 e 433</p>
                         <p>Claro TV <br> 184 e 684</p>
                         <p>Oi TV <br> 01</p>
