--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p class="m-auto text-sm custom:text-md text-white font-bold">Rede Novo Tempo</p>
                 </button> 
             </a>
-            <a href="" class="m-auto w-10/12 md:w-8/12">
+            <a href="https://www.youtube.com/@GravadoraNT" class="m-auto w-10/12 md:w-8/12">
                 <button class="bg-orange-500 p-1 shadow-md rounded-lg shadow-black w-full flex">
                     <img class="w-10 custom:ml-5 ml-3" src="src/img/youtube.png" alt="">
                     <p class="m-auto text-sm md:text-md text-white font-bold">Gravadora Novo Tempo</p>
