--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h2 class="text-white font-bold text-md md:text-xl">Pelo Youtube</h2>
             <a href="https://www.youtube.com/@novotempo" class="m-auto w-10/12 md:w-8/12">
                 <button class="bg-orange-500 p-1 shadow-md rounded-lg shadow-black w-full flex">
-                    <img class="w-10 custom:ml-5 ml-3" src="src/img/youtube.png" alt="">
+                    <img class="w-10 custom:ml-5 ml-3 -mr-3" src="src/img/youtube.png" alt="">
                     <p class="m-auto text-sm custom:text-md text-white font-bold">Rede Novo Tempo</p>
                 </button> 
             </a>
