--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
 
 </head>
-<body class="bg-gray-800  flex flex-col pt-16 text-center">
+<body class="bg-gray-800  flex flex-col py-16 text-center">
     <div class="bg-orange-600 max-w-lg m-auto w-full rounded-lg shadow-md shadow-black p-2">
         <header class="bg-orange-600 m-auto w-full h-20 flex justify-center space-x-10">
             <img class="w-24 " src="src/img/logo_novo_tempo-removebg-preview.png" alt="">
