--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
 
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W0J0HS40MS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W0J0HS40MS');
+</script>
 <body class="bg-gray-800  flex flex-col text-center">
     <div class="bg-orange-600 max-w-lg m-auto w-full rounded-lg shadow-md shadow-black p-2">
         <header class="bg-orange-600 m-auto w-full h-20 flex justify-center space-x-10">
